--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,6 +23,7 @@
 						<a class="menu-item" href="/moncompte">Paramètres</a>
 						<span class="menu-heading">Admin</span>
 						<a class="menu-item" href="/admin/ajouter">Ajouter</a>
+						<a class="menu-item" href="/admin/editer">Editer</a>
 					<% } else { %>
 						<a class="menu-item" href="/connexion">Connexion</a>
 						<a class="menu-item" href="/inscription">Inscription</a>
