--- a/views/pages/team.ejs
+++ b/views/pages/team.ejs
@@ -16,34 +16,23 @@
 		
 		<h2>Nom</h2>
 		<%= userTeam.name %>
+
+		<h2>Liste des joueurs</h2>
+		<% userTeam.players.forEach(function(player){ %>
+			- <%= player %><br />
+		<% }) %>
 	
 		<h2>Gardien</h2>
-		<% if (userTeam.goalkeeper == undefined) { %>
-			Vous n'avez pas encore de gardien. <a href="/monequipe/acheter/gardien">Acheter un gardien</a>.
-		<% } else { %>
-			<%= userTeam.goalkeeper %>
-		<% } %>
+		<a href="/monequipe/acheter/Gardien">Acheter un gardien</a>.
 	
 		<h2>Défenseur</h2>
-		<% if (userTeam.defender == undefined) { %>
-			Vous n'avez pas encore de défenseur. <a href="/monequipe/acheter/defenseur">Acheter un défenseur</a>.
-		<% } else { %>
-			<%= userTeam.defender %>
-		<% } %>
+		<a href="/monequipe/acheter/Defenseur%20central">Acheter un défenseur central</a>.
 	
 		<h2>Milieu de terrain</h2>
-		<% if (userTeam.midfield == undefined) { %>
-			Vous n'avez pas encore de milieu de terrain. <a href="/monequipe/acheter/milieu">Acheter un milieu de terrain</a>.
-		<% } else { %>
-			<%= userTeam.midfield %>
-		<% } %>
+		<a href="/monequipe/acheter/milieu">Acheter un milieu de terrain</a>.
 	
 		<h2>Attaquant</h2>
-		<% if (userTeam.attacker == undefined) { %>
-			Vous n'avez pas encore d'attaquant. <a href="/monequipe/acheter/attaquant">Acheter un attaquant</a>.
-		<% } else { %>
-			<%= userTeam.attacker %>
-		<% } %>
+		<a href="/monequipe/acheter/attaquant">Acheter un attaquant</a>.
 		
 	<% } %>
 </div>
