--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,8 @@
 		<title>Player auctions</title>
 		<link media="all" rel="stylesheet" href="/assets/primer.css" />
 		<link media="all" rel="stylesheet" href="/assets/style.css" />
+		<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+		<script src="/assets/app.js" type="text/javascript"></script>
 	</head>
 	
 	<body>
