--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,9 @@
 		<title>Player auctions</title>
 		<link media="all" rel="stylesheet" href="/assets/primer.css" />
 		<link media="all" rel="stylesheet" href="/assets/style.css" />
-		<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+		<link media="all" rel="stylesheet" href="/assets/datatables/jquery.dataTables.min.css" />
+		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+		<script src="/assets/datatables/jquery.dataTables.min.js"></script>
 		<script src="/assets/app.js" type="text/javascript"></script>
 	</head>
 	
