--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,6 +1,8 @@
 <% include ../partials/header %>
 <div class="blankslate">
 	<h1>Accueil</h1>
-	Bienvenue !
+	Bienvenue sur ce super jeu de foot !<br />
+	Le principe est simple : quand vous achetez des joueurs, leurs valeurs montent. Quand vous les vendez, elles redescedent.<br /><br />
+	Constituez une équipe, choisissez une formation et marquez des points selon l'évolution de la valeur de vos joueurs, chaque jour.<br />
 </div>
 <% include ../partials/footer %>
