--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,12 +14,13 @@
 	<body>
 		<div class="container">
 			<header class="blankslate clean-background">
-				Player Auctions
+				Football Dream Team
 			</header>
 		
 			<div class="columns">
 				<nav class="menu column one-fifth">
 					<a class="menu-item" href="/">Accueil</a>
+					<a class="menu-item" href="/mentions-legales">Mentions légales</a>
 					<% if (user) { %>
 						<a class="menu-item" href="/deconnexion">Déconnexion</a>
 						<span class="menu-heading">Mon compte</span>
