--- a/views/pages/account.ejs
+++ b/views/pages/account.ejs
@@ -2,8 +2,9 @@
 <div class="blankslate">
 	<h1>Mon compte</h1>
 	
-	<strong>id</strong>: <%= user._id %><br>
-	<strong>username</strong>: <%= user.local.username %>
+	<strong>id</strong>: <%= user._id %><br />
+	<strong>username</strong>: <%= user.local.username %><br />
+	<strong>e-mail</strong>: <%= user.local.email %>
 	
 	<% if (error) { %>
         <div class="flash flash-error">Le mot de passe n'a pas été modifié</div>
