--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -12,6 +12,10 @@
 			<dd><input type="text" name="username" class="input-large" placeholder="Identifiant" /></dd>
 		</dl>
 		<dl class="form">
+			<dt><label for="username">E-mail : </label></dt>
+			<dd><input type="text" name="email" class="input-large" placeholder="lionel.messi@barcelona.es" /></dd>
+		</dl>
+		<dl class="form">
 			<dt><label for="password">Mot de passe : </label></dt>
 			<dd><input type="password" name="password" class="input-large" /></dd>
 		</dl>
