--- a/views/pages/buy.ejs
+++ b/views/pages/buy.ejs
@@ -1,15 +1,15 @@
 <% include ../partials/header %>
-<div class="blankslate">
+<div id="buy-player-list" class="blankslate">
 	<h1>Acheter un joueur</h1>
 
 	<form action="#" method="GET" class="form-actions">
 		<dl class="form-group">
 			<dt><label for="filter-position">Position :</label></dt>
 			<dd>
-				<select name="filter-position" id="filter-position" class="form-select">
+				<select name="filter-position" id="filter-position" class="form-select" v-model="position" v-on:change="refresh()">
 					<option value="">Toutes les positions</option>
 					<% positionList.forEach( function( positionItem ){ %>
-						<option value="<%= positionItem._id %>" <% if (positionItem.name == position) { %>selected="selected"<% } %>><%= positionItem.name %></option>
+						<option value="<%= positionItem._id %>"><%= positionItem.name %></option>
 					<% }) %>
 				</select>
 			</dd>
@@ -17,7 +17,7 @@
 		<dl class="form-group">
 			<dt><label for="filter-club">Club :</label></dt>
 			<dd>
-				<select name="filter-club" id="filter-club" class="form-select">
+				<select name="filter-club" id="filter-club" class="form-select" v-model="club" v-on:change="refresh()">
 					<option value="">Tous les clubs</option>
 					<% clubList.forEach( function( club ){ %>
 						<option value="<%= club._id %>"><%= club.name %></option>
@@ -27,19 +27,25 @@
 		</dl>
 	</form>
 
-
-	<div id="form-buy-player-list">
-		<% playerList.forEach(function(player){ %>
+	<div>
+		<div v-for="buyPlayerItem in buyPlayerList" v-bind:buyplayerlist="buyPlayerItem">
+			<strong>{{ buyPlayerItem.firstname }} {{ buyPlayerItem.lastname }}</strong>
+			
 			<form action="/monequipe/acheterjoueur" method="POST">
-				<dl class="form">
-					<dt><label for="player"><%= player.firstname %> <%= player.lastname %> à <%= player.getBuyingValue() %>€</label></dt>
-					<dd>
-						<input type="hidden" name="player" value="<%= player._id %>" />
-						<button class="btn btn-primary" type="submit">Acheter</button>
-					</dd>
-				</dl>
+				<input type="hidden" name="player" :value="buyPlayerItem._id" />
+				<button class="btn btn-primary" type="submit">Acheter pour {{ buyPlayerItem.buyingValue }}€</button>
 			</form>
-		<% }) %>
+		</div>
 	</div>
 </div>
+
+<script src="/assets/vue/vue.js" type="text/javascript"></script>
+<script src="/assets/vue/vue-resource.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+	var appBuyPlayerListPosition = '';
+	<% positionList.forEach( function( positionItem ){ %> <% if (positionItem.name == position) { %>
+	appBuyPlayerListPosition = '<%= positionItem._id %>';
+	<% } %> <% }) %>
+</script>
+<script src="/assets/app.js" type="text/javascript"></script>
 <% include ../partials/footer %>
