Gestion chargement asynchrone et variations

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,10 +5,6 @@
 		<title>Player auctions</title>
 		<link media="all" rel="stylesheet" href="/assets/primer.css" />
 		<link media="all" rel="stylesheet" href="/assets/style.css" />
-
-		<link media="all" rel="stylesheet" href="/assets/datatables/jquery.dataTables.min.css" />
-		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-		<script src="/assets/datatables/jquery.dataTables.min.js"></script>
 	</head>
 	
 	<body>
@@ -24,8 +20,10 @@
 					<% if (user) { %>
 						<a class="menu-item" href="/deconnexion">Déconnexion</a>
 						<span class="menu-heading">Mon compte</span>
-						<a class="menu-item" href="/monequipe">Mon équipe</a>
-						<a class="menu-item" href="/moncompte">Paramètres</a>
+						<a class="menu-item" href="/mon-equipe">Mon équipe</a>
+						<a class="menu-item" href="/mes-joueurs">Mes joueurs</a>
+						<a class="menu-item" href="/ma-formation">Ma formation</a>
+						<a class="menu-item" href="/mon-compte">Paramètres</a>
 						<span class="menu-heading">Admin</span>
 						<a class="menu-item" href="/admin/ajouter">Ajouter</a>
 						<a class="menu-item" href="/admin/editer">Editer</a>
