--- a/views/pages/template-page-team-players.ejs
+++ b/views/pages/template-page-team-players.ejs
@@ -4,7 +4,7 @@
 	
 	<% if (user.team == undefined) { %>
 		<div class="flash flash-error">Votre équipe n'a pas encore été créée !</div>
-		<form action="/monequipe/creer" method="POST">
+		<form action="/mon-equipe/creer" method="POST">
 			<dl class="form">
 				<dt><label for="name">Nom : </label></dt>
 				<dd><input type="text" name="name" class="input-large" placeholder="Nom de l'équipe" /></dd>
@@ -59,7 +59,7 @@
 				<div v-for="buyPlayerItem in buyPlayerList" v-bind:buyplayerlist="buyPlayerItem">
 					<strong>{{ buyPlayerItem.firstname }} {{ buyPlayerItem.lastname }}</strong>
 					
-					<form action="/monequipe/acheterjoueur" method="POST">
+					<form action="/mon-equipe/acheterjoueur" method="POST">
 						<input type="hidden" name="player" :value="buyPlayerItem._id" />
 						<button class="btn btn-primary" type="submit">Acheter pour {{ buyPlayerItem.buyingValue }}€</button>
 					</form>
