--- a/views/pages/template-page-team-tactic.ejs
+++ b/views/pages/template-page-team-tactic.ejs
@@ -4,7 +4,7 @@
 	
 	<% if (user.team == undefined) { %>
 		<div class="flash flash-error">Votre équipe n'a pas encore été créée !</div>
-		<form action="/monequipe/creer" method="POST">
+		<form action="/mon-equipe/creer" method="POST">
 			<dl class="form">
 				<dt><label for="name">Nom : </label></dt>
 				<dd><input type="text" name="name" class="input-large" placeholder="Nom de l'équipe" /></dd>
