--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
 			</div>
 	    
 			<footer class="blankslate clean-background">
-				&copy; 2017 !
+				&copy; 2017 ! (<a href="/mentions-legales">Mentions légales</a>)
 			</footer>
 		</div>
 	</body>
